поправка последней версии lab04

--- a/lab03.cbp
+++ b/lab03.cbp
@@ -13,10 +13,11 @@
 				<Option compiler="gcc" />
 				<Compiler>
 					<Add option="-g" />
+					<Add option="-DCURL_STATICLIB" />
 					<Add directory="curl/include" />
 				</Compiler>
 				<Linker>
-					<Add library="libcurl.dll.a" />
+					<Add library="libcurl.a" />
 					<Add directory="curl/lib" />
 				</Linker>
 			</Target>
