--- a/lab03-test/lab03-test.cbp
+++ b/lab03-test/lab03-test.cbp
@@ -31,6 +31,11 @@
 		<Compiler>
 			<Add option="-Wall" />
 		</Compiler>
+		<Unit filename="../histogram.cpp" />
+		<Unit filename="../histogram.h" />
+		<Unit filename="../svg.cpp" />
+		<Unit filename="../svg.h" />
+		<Unit filename="../test.cpp" />
 		<Extensions>
 			<code_completion />
 			<envvars />
